--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git@github.com:xisiot/lora-network-server"
+    "url": "git@github.com:xisiot/lora-http-server"
   },
   "keywords": [
     "lora"
@@ -51,7 +51,7 @@
   ],
   "apidoc": {
     "name": "lora-httpServer-apis",
-    "url": "http://10.3.242.235:3005",
+    "url": "",
     "header": {
       "title": "Document",
       "filename": "public/apidoc_header.md"
